[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/trash/mixed_1.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_97.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/trash/Trash.gd" type="Script" id=3]
[ext_resource path="res://src/Objects/trash/InteractionArea.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 33.9411

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 32 )

[node name="Trash" type="RigidBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 2
mode = 2
gravity_scale = 50.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource( 4 )

[node name="PickUpButton" type="TouchScreenButton" parent="InteractionArea"]
position = Vector2( -112, -392 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 2 )
action = "pick_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 0, -32 )
shape = SubResource( 2 )

[node name="PickUpTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_InteractionArea_body_exited"]
[connection signal="pressed" from="InteractionArea/PickUpButton" to="." method="_on_PickUpButton_pressed"]
[connection signal="timeout" from="PickUpTimer" to="." method="_on_PickUpTimer_timeout"]
